arc-setup: Skip setting up android-data when virtio-blk /data is used
When virtio-blk /data is used, it is redundant to set up android-data in
the concierge namespace, and arc-create-data can safely be skipped after
removing test code that relies on the setup.

BUG=b:335894331
BUG=b:336178460
TEST=arc-create-data is 1) executed when virtio-fs /data is used and
     2) skipped when virtio-blk /data is used.
TEST=arc-handle-upgrade can successfully mount virtio-blk /data on
     regular boots.
TEST=Tests with SSHFS mounts (e.g. camera.ARCCameraApp) and virtio-blk
     /data mounts (e.g., arc.QuotaProjectID) do not fail even when
     virtio-blk /data is used.

Cq-Depend: chromium:5465305
Change-Id: I2f1a8c1719e4c9c45ea34e19a2bd4bb8b5568853
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5467270
Commit-Queue: Momoko Hattori <momohatt@chromium.org>
Reviewed-by: Momoko Hattori <momohatt@chromium.org>
Tested-by: Momoko Hattori <momohatt@chromium.org>
Reviewed-by: Satoshi Niwa <niwa@chromium.org>

--- a/arc/setup/init/arc-create-data.conf
+++ b/arc/setup/init/arc-create-data.conf
@@ -13,10 +13,16 @@ oom score never
 task
 
 import CHROMEOS_USER
+import ARCVM_DATA_TYPE
 
 env ANDROID_MUTABLE_SOURCE=/run/arcvm/android-data/mount
 
 pre-start script
+    if [ "${ARCVM_DATA_TYPE}" != "virtiofs" ]; then
+      # Skip setting up /home/root/<hash>/android-data when virtio-blk /data is
+      # used.
+      exit 0
+    fi
     # Run arc-create-data in /run/namespaces/mnt_concierge. This namespace is
     # created by vm_concierge.conf, so Concierge must be running in order to
     # enter the namespace. This relies on ArcVmClientAdapter in Chrome to ensure
