vm_tools: Support borealis_host use flag.
Some features are only used on boards that support Borealis. Borealis is
currently only available on select boards.

BUG=b:336168987
TEST=cq

Change-Id: I802902932bde95387b92e212bbd4725bde8c31ea
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5471123
Tested-by: Junichi Uekawa <uekawa@chromium.org>
Reviewed-by: Cindy Lin <xcl@google.com>
Reviewed-by: Isaac Bosompem <mrisaacb@google.com>
Reviewed-by: David Riley <davidriley@chromium.org>
Commit-Queue: Junichi Uekawa <uekawa@chromium.org>
Reviewed-by: Ryuichiro Chiba <chibar@chromium.org>

--- a/vm_tools/host/BUILD.gn
+++ b/vm_tools/host/BUILD.gn
@@ -61,6 +61,7 @@ config("host_target_defaults") {
     "USE_CROSVM_VIRTIO_VIDEO=${use.crosvm_virtio_video}",
     "USE_CROSVM_VULKAN=${use.vulkan}",
     "USE_PMEM_DEVICE_FOR_ROOTFS=${use.amd64}",
+    "USE_BOREALIS_HOST=${use.borealis_host}",
   ]
 
   # TODO(b/331634345): Fix thread safety violations so we can turn this back on.
