net-base: introduce a new enum Technology
This CL introduces a new enum "Technology" to represent the link
transport technology. It's used for replacing shill::Technology.

BUG=b:310584119
TEST=FEATURES=test emerge-brya net-base

Change-Id: I59d12dc203cecdd728cf288f7ce16fc915b44ab4
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5471125
Tested-by: Chih-Yu Huang <akahuang@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>
Commit-Queue: Chih-Yu Huang <akahuang@chromium.org>

--- a/net-base/BUILD.gn
+++ b/net-base/BUILD.gn
@@ -65,6 +65,7 @@ shared_library("libnet-base") {
     "rtnl_message.cc",
     "socket.cc",
     "socket_forwarder.cc",
+    "technology.cc",
   ]
   configs += [ ":target_defaults" ]
   install_path = "lib"
@@ -147,6 +148,7 @@ if (use.test) {
       "rtnl_message_test.cc",
       "socket_forwarder_test.cc",
       "socket_test.cc",
+      "technology_test.cc",
     ]
     configs += [
       "//common-mk:test",
