diagnostics: Rename targets in BUILD.gn of cros_healthd/system
- Remove unnecessary "libcros_healthd" prefix
- Use "test_support" as the name of test utilities

BUG=b:328015642
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: Ib3487a60aef74c9249e01216e2b416c5d11440c4
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5467989
Reviewed-by: Byron Lee <byronlee@chromium.org>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Tested-by: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/cros_healthd/BUILD.gn
+++ b/diagnostics/cros_healthd/BUILD.gn
@@ -33,7 +33,7 @@ source_set("libcros_healthd") {
     "//diagnostics/cros_healthd/events:libcros_healthd_events",
     "//diagnostics/cros_healthd/fetchers:libcros_healthd_fetchers",
     "//diagnostics/cros_healthd/routines",
-    "//diagnostics/cros_healthd/system:libcros_healthd_system",
+    "//diagnostics/cros_healthd/system",
     "//diagnostics/dbus_bindings",
     "//diagnostics/mojom:libmojom_utils",
     "//diagnostics/mojom/external:libcros_healthd_internal",
@@ -51,7 +51,7 @@ executable("cros_healthd") {
     ":libcros_healthd",
     "//diagnostics/cros_healthd/executor",
     "//diagnostics/cros_healthd/minijail",
-    "//diagnostics/cros_healthd/system:libcros_healthd_system",
+    "//diagnostics/cros_healthd/system",
   ]
 }
 
@@ -102,8 +102,8 @@ if (use.test) {
       "//diagnostics/cros_healthd/routines/privacy_screen:privacy_screen_test",
       "//diagnostics/cros_healthd/routines/sensor:sensor_test",
       "//diagnostics/cros_healthd/routines/storage:storage_test",
-      "//diagnostics/cros_healthd/system:libcros_healthd_system_test",
-      "//diagnostics/cros_healthd/system:libcros_healthd_system_test_utils",
+      "//diagnostics/cros_healthd/system:system_test",
+      "//diagnostics/cros_healthd/system:test_support",
       "//diagnostics/cros_healthd/utils:libcros_healthd_utils_test",
       "//diagnostics/dbus_bindings",
       "//diagnostics/mojom:libmojom_utils_test",
