--- a/diagnostics/cros_healthd/events/BUILD.gn
+++ b/diagnostics/cros_healthd/events/BUILD.gn
@@ -26,7 +26,7 @@ source_set("libcros_healthd_events") {
   public_configs = [ ":libcros_healthd_events_public_pkg_deps" ]
   deps = [
     "//diagnostics/base",
-    "//diagnostics/cros_healthd/system:libcros_healthd_system",
+    "//diagnostics/cros_healthd/system",
     "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
   ]
   sources = [
@@ -77,7 +77,7 @@ if (use.test) {
       "//diagnostics/base",
       "//diagnostics/base:healthd_testrunner",
       "//diagnostics/cros_healthd/executor/utils:test_support",
-      "//diagnostics/cros_healthd/system:libcros_healthd_system_test_utils",
+      "//diagnostics/cros_healthd/system:test_support",
       "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
     ]
   }
