--- a/diagnostics/cros_healthd/routines/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/BUILD.gn
@@ -46,7 +46,7 @@ source_set("utils") {
   public_deps = [ "//diagnostics/mojom/public:libcros_healthd_mojo_bindings" ]
   deps = [
     "//diagnostics/base",
-    "//diagnostics/cros_healthd/system:libcros_healthd_system",
+    "//diagnostics/cros_healthd/system",
   ]
 }
 
@@ -80,7 +80,7 @@ if (use.test) {
       ":routines",
       "//diagnostics/base",
       "//diagnostics/base:healthd_testrunner",
-      "//diagnostics/cros_healthd/system:libcros_healthd_system_test_utils",
+      "//diagnostics/cros_healthd/system:test_support",
     ]
   }
 }
