--- a/diagnostics/cros_healthd/routines/memory_and_cpu/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/memory_and_cpu/BUILD.gn
@@ -23,7 +23,7 @@ source_set("memory_and_cpu") {
   public_deps = [ "//diagnostics/cros_healthd/routines:utils" ]
   deps = [
     "//diagnostics/base",
-    "//diagnostics/cros_healthd/system:libcros_healthd_system",
+    "//diagnostics/cros_healthd/system",
     "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
   ]
 }
@@ -46,7 +46,7 @@ if (use.test) {
       "//diagnostics/cros_healthd/executor/utils:test_support",
       "//diagnostics/cros_healthd/mojom:executor_mojo_bindings",
       "//diagnostics/cros_healthd/routines:libroutine_test_utils",
-      "//diagnostics/cros_healthd/system:libcros_healthd_system_test_utils",
+      "//diagnostics/cros_healthd/system:test_support",
     ]
   }
 }
