--- a/diagnostics/cros_healthd/routines/network/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/network/BUILD.gn
@@ -26,7 +26,7 @@ source_set("network") {
   public_deps = [ "//diagnostics/cros_healthd/routines:utils" ]
   deps = [
     "//diagnostics/base",
-    "//diagnostics/cros_healthd/system:libcros_healthd_system",
+    "//diagnostics/cros_healthd/system",
     "//diagnostics/mojom/external:libnetwork_diagnostics_mojo_bindings",
     "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
   ]
@@ -55,7 +55,7 @@ if (use.test) {
       "//diagnostics/base",
       "//diagnostics/base:healthd_testrunner",
       "//diagnostics/cros_healthd/routines:libroutine_test_utils",
-      "//diagnostics/cros_healthd/system:libcros_healthd_system_test_utils",
+      "//diagnostics/cros_healthd/system:test_support",
     ]
   }
 }
