--- a/diagnostics/cros_healthd/system/BUILD.gn
+++ b/diagnostics/cros_healthd/system/BUILD.gn
@@ -5,7 +5,7 @@
 import("//common-mk/pkg_config.gni")
 
 # Library that provides system-level utilities used by cros_healthd.
-pkg_config("libcros_healthd_system_pkg_deps") {
+pkg_config("system_pkg_deps") {
   pkg_deps = [
     "dbus-1",
     "iioservice_ipc",
@@ -29,18 +29,18 @@ config("pcilib_config") {
   cflags = [ "-Wno-format-nonliteral" ]
 }
 
-source_set("libcros_healthd_system_pci_util") {
+source_set("system_pci_util") {
   configs += [
-    ":libcros_healthd_system_pkg_deps",
+    ":system_pkg_deps",
     ":pcilib_config",
   ]
   sources = [ "pci_util_impl.cc" ]
 }
 
-source_set("libcros_healthd_system") {
-  configs += [ ":libcros_healthd_system_pkg_deps" ]
+source_set("system") {
+  configs += [ ":system_pkg_deps" ]
   deps = [
-    ":libcros_healthd_system_pci_util",
+    ":system_pci_util",
     "//diagnostics/base",
     "//diagnostics/cros_healthd/mojom:executor_mojo_bindings",
     "//diagnostics/cros_healthd/utils:libcros_healthd_utils",
@@ -65,7 +65,7 @@ source_set("libcros_healthd_system") {
 
 if (use.test || use.fuzzer) {
   # Libraries for unit tests and fuzzers.
-  pkg_config("libcros_healthd_system_test_utils_pkg_deps") {
+  pkg_config("test_support_pkg_deps") {
     pkg_deps = [
       "dbus-1",
       "libattestation-client",
@@ -85,22 +85,22 @@ if (use.test || use.fuzzer) {
     ]
   }
 
-  pkg_config("libcros_healthd_system_test_utils_public_pkg_deps") {
+  pkg_config("test_support_public_pkg_deps") {
     pkg_deps = [
       "iioservice_ipc",
       "mojo_service_manager",
     ]
   }
 
-  source_set("libcros_healthd_system_test_utils") {
+  source_set("test_support") {
     configs += [
-      ":libcros_healthd_system_test_utils_pkg_deps",
+      ":test_support_pkg_deps",
       "//common-mk:test",
     ]
-    public_configs = [ ":libcros_healthd_system_test_utils_public_pkg_deps" ]
+    public_configs = [ ":test_support_public_pkg_deps" ]
     public_deps = [ "//diagnostics/cros_healthd/fake" ]
     deps = [
-      ":libcros_healthd_system",
+      ":system",
       "//diagnostics/base",
     ]
     sources = [
@@ -117,7 +117,7 @@ if (use.test || use.fuzzer) {
 }
 
 if (use.test) {
-  pkg_config("libcros_healthd_system_test_pkg_deps") {
+  pkg_config("system_test_pkg_deps") {
     pkg_deps = [
       "libchrome",
       "libchrome-test",
@@ -128,7 +128,7 @@ if (use.test) {
     ]
   }
 
-  source_set("libcros_healthd_system_test") {
+  source_set("system_test") {
     sources = [
       "bluez_event_hub_test.cc",
       "cros_config_test.cc",
@@ -137,10 +137,10 @@ if (use.test) {
       "powerd_adapter_impl_test.cc",
       "system_config_test.cc",
     ]
-    configs += [ ":libcros_healthd_system_test_pkg_deps" ]
+    configs += [ ":system_test_pkg_deps" ]
     deps = [
-      ":libcros_healthd_system",
-      ":libcros_healthd_system_test_utils",
+      ":system",
+      ":test_support",
       "//diagnostics/base",
       "//diagnostics/base:healthd_testrunner",
     ]
