heartd: Stop daemon when no running jobs
Some clients don't have a place to put the heartd activation code, hence
heartd should run by default for those cases. However, to save resource,
if there is no running job, heartd should stop itself.

This CL does:
1. Run by default.
2. Stop automatically after two minutes from start up.
3. Check itself hourly. Because clients can stop jobs during runtime.

BUG=b:333812709
TEST=manual test on DUT
TEST=FEATURES=test emerge-brya heartd

Change-Id: I1477a6a2b89f8c72b42718fde486186608df8e86
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5465278
Reviewed-by: Denny Huang <dennyh@google.com>
Tested-by: Kerker Yang <kerker@chromium.org>
Commit-Queue: Kerker Yang <kerker@chromium.org>

--- a/heartd/init/heartd.conf
+++ b/heartd/init/heartd.conf
@@ -5,11 +5,8 @@
 description     "ChromeOS heartd (Health Ensure and Accident Resolve Treatment)"
 author          "chromium-os-dev@chromium.org"
 
-# This daemon is started by D-Bus service activation configured in
-# dbus/org.chromium.Heartd.service.
+start on starting system-services
 stop on stopping system-services
-respawn
-respawn limit 3 10  # if the job respawns 3 times in 10 seconds, stop trying.
 
 # It should not be killed by OOM killer, otherwise we may loose protection.
 oom score never
