--- a/heartd/daemon/BUILD.gn
+++ b/heartd/daemon/BUILD.gn
@@ -22,6 +22,7 @@ source_set("libheartd") {
     "heartbeat_tracker.cc",
     "heartd.cc",
     "mojo_service.cc",
+    "scavenger.cc",
   ]
   configs += [ ":target_defaults" ]
   deps = [
@@ -39,6 +40,7 @@ if (use.test) {
       "heartbeat_manager_test.cc",
       "heartbeat_tracker_test.cc",
       "heartd_test.cc",
+      "scavenger_test.cc",
     ]
     configs += [
       "//common-mk:test",
