diagnostics: Clean up BUILD.gn for sensor routines
Add missing dependencies and remove unnecessary ones.

BUG=b:335826552
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: I8bd1b43c5130daaf592c4528924ababb5cbc7146
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5467991
Tested-by: Wei-Luan Wang <weiluanwang@google.com>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Byron Lee <byronlee@chromium.org>

--- a/diagnostics/cros_healthd/routines/sensor/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/sensor/BUILD.gn
@@ -2,23 +2,22 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-pkg_config("sensor_pkg_config") {
-  pkg_deps = [
-    "iioservice_ipc",
-    "libchrome",
-  ]
-}
-
 source_set("sensor") {
   sources = [
     "sensitive_sensor.cc",
     "sensor_existence_checker.cc",
   ]
-  configs += [ ":sensor_pkg_config" ]
-  public_deps = [ "//diagnostics/cros_healthd/routines:utils" ]
+  public_pkg_deps = [
+    "iioservice_ipc",
+    "libchrome",
+    "libmojo",
+  ]
+  public_deps = [
+    "//diagnostics/cros_healthd/routines:utils",
+    "//diagnostics/cros_healthd/system",
+  ]
   deps = [
     "//diagnostics/base",
-    "//diagnostics/cros_healthd/system",
     "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
   ]
 }
@@ -29,13 +28,18 @@ if (use.test) {
       "sensitive_sensor_test.cc",
       "sensor_existence_checker_test.cc",
     ]
-    configs += [ ":sensor_pkg_config" ]
+    pkg_deps = [
+      "libchrome-test",
+      "libmojo",
+    ]
     deps = [
       ":sensor",
       "//diagnostics/base",
       "//diagnostics/base:healthd_testrunner",
       "//diagnostics/cros_healthd/routines:libroutine_test_utils",
       "//diagnostics/cros_healthd/system:test_support",
+      "//diagnostics/cros_healthd/utils:libcros_healthd_utils",
+      "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
     ]
   }
 }
