diagnostics: Move routine factory to routines/ directory
The implementation of routine factory depends directly on concrete
routines. Reflect this in the BUILD.gn files.

BUG=b:335826552
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: Ie64ec6c7704b1d7e6e59acba074bc1579c72674d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5467992
Tested-by: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Kerker Yang <kerker@chromium.org>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/cros_healthd/BUILD.gn
+++ b/diagnostics/cros_healthd/BUILD.gn
@@ -23,7 +23,6 @@ source_set("libcros_healthd") {
     "cros_healthd_daemon.cc",
     "cros_healthd_diagnostics_service.cc",
     "cros_healthd_mojo_service.cc",
-    "cros_healthd_routine_factory_impl.cc",
     "event_aggregator.cc",
     "fetch_aggregator.cc",
   ]
@@ -67,10 +66,7 @@ if (use.test) {
 
   executable("cros_healthd_test") {
     run_test = true
-    sources = [
-      "cros_healthd_diagnostics_service_test.cc",
-      "fake_cros_healthd_routine_factory.cc",
-    ]
+    sources = [ "cros_healthd_diagnostics_service_test.cc" ]
     configs += [ ":cros_healthd_test_pkg_deps" ]
     deps = [
       ":libcros_healthd",
