diagnostics: Rename targets in BUILD.gn of cros_healthd/utils
- Remove unnecessary "libcros_healthd" prefix

BUG=b:328015642
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: Id1d20947d64fd858c2e56937770d8e7df7e961bc
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5465435
Tested-by: Wei-Luan Wang <weiluanwang@google.com>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Byron Lee <byronlee@chromium.org>

--- a/diagnostics/cros_healthd/BUILD.gn
+++ b/diagnostics/cros_healthd/BUILD.gn
@@ -100,7 +100,7 @@ if (use.test) {
       "//diagnostics/cros_healthd/routines/storage:storage_test",
       "//diagnostics/cros_healthd/system:system_test",
       "//diagnostics/cros_healthd/system:test_support",
-      "//diagnostics/cros_healthd/utils:libcros_healthd_utils_test",
+      "//diagnostics/cros_healthd/utils:utils_test",
       "//diagnostics/dbus_bindings",
       "//diagnostics/mojom:libmojom_utils_test",
     ]
