--- a/diagnostics/cros_healthd/fetchers/BUILD.gn
+++ b/diagnostics/cros_healthd/fetchers/BUILD.gn
@@ -28,7 +28,7 @@ source_set("libcros_healthd_fetchers") {
     "//diagnostics/base",
     "//diagnostics/cros_healthd/fetchers/storage:storage_data_source",
     "//diagnostics/cros_healthd/system",
-    "//diagnostics/cros_healthd/utils:libcros_healthd_utils",
+    "//diagnostics/cros_healthd/utils",
     "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
   ]
   sources = [
@@ -107,7 +107,7 @@ if (use.test) {
       "//diagnostics/base:healthd_testrunner",
       "//diagnostics/cros_healthd/fetchers/storage:storage_data_source_test",
       "//diagnostics/cros_healthd/system:test_support",
-      "//diagnostics/cros_healthd/utils:libcros_healthd_utils",
+      "//diagnostics/cros_healthd/utils",
     ]
   }
 }
