--- a/diagnostics/cros_healthd/fetchers/storage/BUILD.gn
+++ b/diagnostics/cros_healthd/fetchers/storage/BUILD.gn
@@ -17,7 +17,7 @@ source_set("storage_data_source") {
   configs += [ ":storage_data_source_common_pkg_deps" ]
   deps = [
     "//diagnostics/base",
-    "//diagnostics/cros_healthd/utils:libcros_healthd_utils",
+    "//diagnostics/cros_healthd/utils",
     "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
   ]
   libs = [
