biod: Add comment to the BUILD.gn file
Add a comment to the biod/BUILD.gn file stating that the
biod_client_tool will be installed using the biod_dev package.

BUG=b:132732632
TEST=Run CQ

Change-Id: I725c79ebddf48f570f0a4701eb03a3886fdf9394
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5472325
Tested-by: Firas Sammoura <fsammoura@google.com>
Reviewed-by: Tom Hughes <tomhughes@chromium.org>
Commit-Queue: Firas Sammoura <fsammoura@google.com>
Reviewed-by: Craig Hesling <hesling@chromium.org>

--- a/biod/BUILD.gn
+++ b/biod/BUILD.gn
@@ -122,6 +122,7 @@ executable("bio_wash") {
   deps = [ ":libbiod" ]
 }
 
+# The biod_client_tool will be installed by the biod-dev package.
 executable("biod_client_tool") {
   sources = [ "tools/biod_client_tool.cc" ]
   configs += [ ":target_defaults" ]
