cryptohome: Allow power manager to EvictDeviceKey
EvictDeviceKey is called from power_manager, not Chrome. Allow
power_manager's policy name `power` to send the method call and
disallow chronos user since it is not needed per current design.

BUG=b:288944490
TEST=Emerge deploy cryptohome and cryptohome-client
TEST=cryptohome -u power --action=EvictDeviceKey

Change-Id: If52de560f6b070bda7c8dd21d5d1d963cb488711
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5472329
Tested-by: Betul Soysal <betuls@google.com>
Reviewed-by: Zi Lin <lziest@google.com>
Commit-Queue: Betul Soysal <betuls@google.com>

--- a/cryptohome/etc/org.chromium.UserDataAuth.conf
+++ b/cryptohome/etc/org.chromium.UserDataAuth.conf
@@ -70,9 +70,6 @@
            send_member="PreparePersistentVault"/>
     <allow send_destination="org.chromium.UserDataAuth"
            send_interface="org.chromium.UserDataAuthInterface"
-           send_member="EvictDeviceKey"/>
-    <allow send_destination="org.chromium.UserDataAuth"
-           send_interface="org.chromium.UserDataAuthInterface"
            send_member="PrepareVaultForMigration"/>
     <allow send_destination="org.chromium.UserDataAuth"
            send_interface="org.chromium.UserDataAuthInterface"
@@ -196,6 +193,12 @@
     <allow send_destination="org.chromium.UserDataAuth"
            send_interface="org.chromium.UserDataAuthInterface"
            send_member="ListAuthFactors"/>
+  </policy>
+
+  <policy user="power">
+    <allow send_destination="org.chromium.UserDataAuth"
+           send_interface="org.chromium.UserDataAuthInterface"
+           send_member="EvictDeviceKey"/>
   </policy>
 
   <policy user="debugd">
