dlcservice: Golang `dlctool`
.. deshelling for `dlctool`.

Please refer to the dependency that will need to go in atomically.

BUG=b:335722339
TEST=emerge-$B dlcservice

Cq-Depend: chromium:5473838
Change-Id: I90711002e15dc70b8cf84661ec620b1882400ef5
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5473474
Tested-by: Jae Hoon Kim <kimjae@chromium.org>
Reviewed-by: Yuanpeng Ni‎ <yuanpengni@chromium.org>
Commit-Queue: Jae Hoon Kim <kimjae@chromium.org>

--- a/dlcservice/BUILD.gn
+++ b/dlcservice/BUILD.gn
@@ -173,6 +173,7 @@ static_library("libdlcservice") {
 install_config("install_dlctool") {
   sources = [ "tools/dlctool" ]
   install_path = "/usr/local/bin"
+  outputs = [ "dlctool-shell" ]
   type = "executable"
 }
 
