init: startup: Add tmpfile for chromeos-startup
Add directory in /run for chromeos-startup to store
logs and metrics gathered at boot.

BUG=b:172221451
TEST=emerge chromeos-init

Change-Id: Ibd66d250b26c3434e5dbdca85933378515921e8d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5479876
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>
Tested-by: Gwendal Grignou <gwendal@chromium.org>
Reviewed-by: Allen Webb <allenwebb@google.com>

--- a/init/tmpfiles.d/chromeos.conf
+++ b/init/tmpfiles.d/chromeos.conf
@@ -19,6 +19,9 @@ d= /mnt/stateful_partition/unencrypted 0755 root root
 d= /mnt/stateful_partition/unencrypted/cache 0755 root root
 d= /mnt/stateful_partition/unencrypted/preserve 0775 root preserve
 
+# Create a directory for init (chromeos-startup) related logs and metrics.
+d= /run/chromeos_startup 0755 root root
+
 # Create a directory for mount-encrypted related logs and metrics.
 d= /run/mount_encrypted 0755 root root
 
