init: Move dumpe2fs_stateful.log to /run/chromeos_startup
Reduce polution in /run, will add more files there.

BUG=b:172221451
TEST=compile

Cq-Depend: chromium:5473480
Change-Id: I1100f904f285acb858e684bf504df2268bb7837b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5479877
Reviewed-by: Allen Webb <allenwebb@google.com>
Tested-by: Gwendal Grignou <gwendal@chromium.org>
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>
Reviewed-by: Ian Barkley-Yeung <iby@chromium.org>

--- a/crash-reporter/crash_reporter_logs.conf
+++ b/crash-reporter/crash_reporter_logs.conf
@@ -572,7 +572,7 @@ clobber-state=\
 # from here.
 dumpe2fs_stateful=\
   echo "===dumpe2fs (stateful partition)==="; \
-  head -n 100 /run/dumpe2fs_stateful.log; \
+  head -n 100 /run/chromeos_startup/dumpe2fs_stateful.log; \
   echo EOF
 
 # Collect encrypted stateful partition dumpe2fs for debugging early boot mount
