--- a/resourced/minijail/resourced.conf
+++ b/resourced/minijail/resourced.conf
@@ -81,9 +81,6 @@ bind-mount = /sys/fs/cgroup/cpuset,,1
 # Need write access to /sys/fs/cgroup/cpu for SetProcessState.
 bind-mount = /sys/fs/cgroup/cpu,,1
 
-# Need write access to /dev/cpu for setting MSRs
-bind-mount = /dev/cpu,,1
-
 # Get a writeable and empty /var tmpfs path.
 mount = tmpfs,/var,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC
 
@@ -104,8 +101,7 @@ G
 #
 # CAP_SYS_PTRACE is needed to read various parts of sysfs. process_vm_read
 # and other more dangerous syscalls are blocked by seccomp.
-# CAP_SYS_RAWIO added for accessing x86 MSRs
-c = cap_sys_resource,cap_sys_nice,cap_sys_ptrace,cap_sys_rawio=ep
+c = cap_sys_resource,cap_sys_nice,cap_sys_ptrace=e
 
 # No new privileges (no_new_privs).
 n
