--- a/init/upstart/test-init/encrypted_stateful/create-system-key.conf
+++ b/init/upstart/test-init/encrypted_stateful/create-system-key.conf
@@ -5,13 +5,15 @@
 description   "Chrome OS post-system-key-setting cleanup"
 author        "chromium-os-dev@chromium.org"
 
+oom score -100
+
 # This job handles delayed dumping of the system key creation log file into
 # syslog, until the encrypted stateful is mounted, but before the log of
 # mount-encrypted is copied into /var/log and syslog.
 start on starting mount-encrypted
 
 script
-  SYSTEM_KEY_LOG_FILE="/run/create_system_key.log"
+  SYSTEM_KEY_LOG_FILE="/run/chromeos_startup/create_system_key.log"
 
   # Dump the create-system-key logs in syslog to preserve them over reboots.
   logger -t create-system-key -f "${SYSTEM_KEY_LOG_FILE}" || true
