privacy: use generate_pkg_config.
use generate_pkg_config instead of using on .pc file as suggested in https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5463969/comment/138be45f_5682f6d7/

BUG=b:329272324
TEST=CQ

Change-Id: Ibe923ae114bc6391e16502f7705e8494f5e3eb3b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5474354
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Tested-by: Avan Rathod <avanrathod@google.com>
Commit-Queue: Avan Rathod <avanrathod@google.com>
Reviewed-by: Chris Mullins <crmullins@chromium.org>

--- a/privacy/BUILD.gn
+++ b/privacy/BUILD.gn
@@ -3,10 +3,7 @@
 # found in the LICENSE file.
 import("//common-mk/pkg_config.gni")
 group("all") {
-  deps = [
-    ":install_pkg_config",
-    ":libprivacy",
-  ]
+  deps = [ ":libprivacy" ]
 }
 
 pkg_config("target_defaults") {
@@ -18,9 +15,15 @@ shared_library("libprivacy") {
   install_path = "lib"
   include_dirs = [ "." ]
   public_configs = [ ":target_defaults" ]
+  deps = [ ":libprivacy_pc" ]
 }
 
-install_config("install_pkg_config") {
-  sources = [ "libprivacy.pc" ]
-  install_path = "${libdir}/pkgconfig"
+generate_pkg_config("libprivacy_pc") {
+  name = "libprivacy"
+  output_name = "libprivacy"
+  description = "Chrome OS privacy library"
+  version = "0.0.1"
+
+  libs = [ "-lprivacy" ]
+  install = true
 }
