patchpanel: implement basic network_id support
This patch adds the minimum implementation to support network_id
allocation and assignment of network interfaces to network_ids.

This patch also enables the support for correctly marking a socket with
the routing fwmark tag derived from a network_id when using the
TagSocket DBus API.

BUG=b:322083502
BUG=b:336883268
TEST=FEATURES=test emerge-$BOARD patchpanel

Cq-Depend: chromium:5632843
Change-Id: I83230ef847a257028b95ab6179d7dd31c6ab8839
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5486996
Commit-Queue: Hugo Benichi <hugobenichi@google.com>
Tested-by: Hugo Benichi <hugobenichi@google.com>
Reviewed-by: Jie Jiang <jiejiang@chromium.org>
Reviewed-by: Chih-Yu Huang <akahuang@chromium.org>

--- a/patchpanel/BUILD.gn
+++ b/patchpanel/BUILD.gn
@@ -348,6 +348,7 @@ if (use.test) {
       "mock_lifeline_fd_service.cc",
       "mock_multicast_counters_service.cc",
       "mock_process_runner.cc",
+      "mock_routing_service.cc",
       "mock_rtnl_client.cc",
       "mock_vm_concierge_client.cc",
       "multicast_counters_service_test.cc",
